[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Teclas.gd" type="Script" id=1]
[ext_resource path="res://Assets/Pictures/background.png" type="Texture" id=2]

[node name="Teclas" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 1802, 1502 )
scale = Vector2( 11.0422, 15.6222 )
texture = ExtResource( 2 )

[node name="Teclas" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.0
margin_top = -129.0
margin_right = -3.0
margin_bottom = -41.0
rect_scale = Vector2( 2, 2 )
text = "Opções
de
Teclas"
align = 1
valign = 1

[node name="Voltar" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 480.0
margin_top = -136.0
margin_right = 528.0
margin_bottom = -116.0
text = "Voltar"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.414
anchor_top = 0.673
anchor_right = 0.574
anchor_bottom = 0.673
margin_left = -20.0
margin_top = -34.0
margin_right = 20.0
margin_bottom = 34.0

[node name="Mouse" type="Button" parent="VBoxContainer"]
margin_right = 258.0
margin_bottom = 20.0
text = "Mira com Mouse"

[node name="Teclado" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 258.0
margin_bottom = 44.0
text = "Mira com Teclado"

[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="pressed" from="VBoxContainer/Mouse" to="." method="_on_Mouse_pressed"]
[connection signal="pressed" from="VBoxContainer/Teclado" to="." method="_on_Teclado_pressed"]
